# HunterAI

./: .env.example  .gitignore  README.md  SUMMARY.md  SUPABASE_SETUP.md  Tailored_Resume_QuickHyre.tex  index.html  package-lock.json  package.json  pyproject.toml  website_idea_summary.md  wrangler.jsonc
backend/: .dockerignore  Dockerfile  main.py  requirements.txt  run_matching.py  test_llm.py
backend/config/: database.py  models.py
backend/data/: jobs.json  user_profiles.json
backend/engine/: constraint_extractor.py  matching_engine.py  preference_extractor.py
backend/parsers/: job_parser.py  user_resume_parser.py
backend/routes/: auth.py  chat_router.py  file_upload.py  matches_router.py  recommendations.py  resume_ai_router.py  tailor_router.py  user_router.py
backend/scrapers/: internshala_scraper.py
backend/services/: resume_tailor.py
backend/tests/: test_groq.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  icon.tsx  layout.tsx  loading.tsx  page.tsx  shell.css  template.tsx
frontend/app/bookmarks/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: PreferenceChat.tsx  ResumeDocument.tsx
frontend/lib/: api.ts  dummyResumeData.ts  recommendations.ts  resumeAutofill.ts  resumeThemes.ts
frontend/public/: sitemap.xml
frontend/types/: index.ts  resume.ts  resumeTheme.ts
frontend/utils/: generateLatex.ts
public/: robots.txt
src/: App.tsx  index.css  types.ts
src/lib/: api.ts
(+45 files in other folders)
