[project]
name = "internship-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "pymupdf",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "uvicorn>=0.49.0",
    "python-multipart",
    "beautifulsoup4",
    "requests",
    "sqlalchemy",
    "psycopg2-binary",
    "pyjwt",
    "python-dotenv",
    "httpx",
    "groq>=0.37.1",
    "langchain-groq>=1.1.3",
    "cryptography>=48.0.0",
]

[tool.vercel]
entrypoint = "backend.main:app"
